fix(names): change ConsoleServices to ConsoleService ane change method findAllCommands and repository